# cubometric

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
shaders/: frag.glsl
shaders/debug/: frag.glsl  vert.glsl
shaders/face/: frag.glsl  geom.glsl  vert.glsl
shaders/quad/: frag.glsl  vert.glsl
shaders/skybox/: frag.glsl  vert.glsl
src/: Application.cpp  Application.h  main.cpp
src/game/data_loaders/: JsonLoader.cpp  JsonLoader.h  JsonStream.cpp  JsonStream.h  TextureManager.cpp  TextureManager.h  globals.h
src/game/world/: BlockType.h  Chunk.cpp  Chunk.h  ChunkData.cpp  ChunkData.hpp  EFacing.h  LowDetailChunk.cpp  LowDetailChunk.hpp  World.cpp  World.h  globals.hpp
src/game/world/worldgen/: WorldGenerator.hpp
src/game/world/worldgen/noise/: Interpolator.hpp  PerlinNoise.hpp
src/render/: Camera.cpp  Camera.h  Frustum.h  Plane.h  globals.h  utils.h
src/render/buffers/: Allocator.hpp  GPUBuffer.h  MappedBufferPool.h
src/render/renderers/block/: BlockFaceRenderer.cpp  BlockFaceRenderer.h  ChunkMappedRenderer.cpp  ChunkMappedRenderer.h  CubeModel.h  FaceInstance.h  FaceMesh.h  Vertex.h
src/render/renderers/debug/: DebugRenderer.cpp  DebugRenderer.h  GraphRenderer.cpp  GraphRenderer.h
src/render/renderers/world/: ChunkMesher.cpp  ChunkMesher.h  QuadRenderer.cpp  QuadRenderer.hpp  SkyRenderer.cpp  SkyRenderer.hpp  WorldRenderer.cpp  WorldRenderer.h
src/render/utils/: Shader.cpp  Shader.h
src/utils/: AABB.hpp  Shader.cpp  Shader.hpp  VulkanWindow.cpp  VulkanWindow.hpp
